--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "name": "tweet-bookmark-manager",
+  "name": "tweetstash",
   "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
